--- a/Develop/server/package.json
+++ b/Develop/server/package.json
@@ -1,7 +1,7 @@
 {
     "name": "JATE",
     "version": "1.0.0",
-    "description": "",
+    "description": "Text editor application converted to PWA",
     "main": "server.js",
     "scripts": {
         "server": "nodemon server.js --ignore client"
