Finished up the src-sw.js and webpack.config.js files, adding the loaders, program and plugin infos, cache scripts, and even added some comments.

--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JATE",
+  "name": "jate",
   "version": "1.0.0",
   "description": "Text editor application converted to PWA",
   "main": "server.js",
