--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "npm test",
-    "build": "cd client && npm run build"
+    "build": "cd develop && cd client && npm run build"
   },
   "author": "",
   "license": "MIT"
