--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "name": "jate",
   "version": "1.0.0",
-  "description": "A text editor for making notes or snippets of code that can be retrieved later, with or without internet.",
+  "description": "Text editor application converted to PWA",
   "main": "server.js",
   "scripts": {
-    "test": "npm test",
-    "build": "cd develop && cd client && npm run build"
+    "start:dev": "concurrently \"cd client && npm run dev\" \"cd server && npm run server\" ",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server nodemon server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "client": "cd client && npm start"
   },
+  "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "if-env": "^1.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
+  }
 }
